src/app/pages/address/address.component.scss
.break-dots {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.noPadding {
  padding: 0 !important;
}

.contract-icon {
  width: 100%;
  max-width: 128px;
  max-height:128px;
}

pre {
  color:#616161;
  padding: 20px;
}

.break-word {
  white-space: pre-wrap;
  word-break: break-all;
}

div.qrcode{
  text-align: center;
  img{
    width: 100%;
    max-width: 300px;
    margin: 10px;
  }
}

.small-tx-list {

  nb-list-item {
    padding: 40px 0;
  }
}

nb-badge {
  width: 40px;
}

.decoded{
  margin: 10px 0px 10px;
}

